BuildHughes/translation-tool/inputs/source_meta/objects/User.object
<CustomObject>
    <fields>
        <fullName>CMS_Role__c</fullName>
        <label>CMS Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Is_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Business__c</fullName>
        <label>Country of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Agent_Type__c</fullName>
        <label>Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_DSS_User_Name__c</fullName>
        <label>DSS User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Federation_ID__c</fullName>
        <externalId>true</externalId>
        <label>PS/Federation ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HSvc_NMP_User_Name__c</fullName>
        <label>NMP User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_PS_User_Name__c</fullName>
        <label>PS User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Default_Queue__c</fullName>
        <label>Default Queue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Agent_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TP Monterrey Universal</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey MOD</fullName>
                </value>
                <value>
                    <fullName>South America Control Center</fullName>
                </value>
                <value>
                    <fullName>Hughes Distributor</fullName>
                </value>
                <value>
                    <fullName>SDG</fullName>
                </value>
                <value>
                    <fullName>Hughes de Colombia</fullName>
                </value>
                <value>
                    <fullName>General Ops</fullName>
                </value>
                <value>
                    <fullName>MOD</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
                <value>
                    <fullName>Hughes de Panama</fullName>
                </value>
                <value>
                    <fullName>Hughes de Peru</fullName>
                </value>
                <value>
                    <fullName>Hughes de Ecuador</fullName>
                </value>
                <value>
                    <fullName>Hughes de Chile</fullName>
                </value>
                <value>
                    <fullName>Hughes de Corporate (HQ)</fullName>
                </value>
                <value>
                    <fullName>Hughes de Argentina</fullName>
                </value>
                <value>
                    <fullName>Ent SA Frontline</fullName>
                </value>
                <value>
                    <fullName>Ent SA Field Support</fullName>
                </value>
                <value>
                    <fullName>Ent SA Control Desk</fullName>
                </value>
                <value>
                    <fullName>Ent SA Business Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>